# alert_net

backend/: .env.sample  Cargo.toml
backend/src/: main.rs
backend/src/common/models/: detection.rs  device.rs
backend/src/database/: detection.rs  device.rs  mod.rs
backend/src/message/receive/: detection.rs
backend/src/message/send/: alert.rs
backend_simple/: .env.sample  Cargo.toml
backend_simple/src/: main.rs
frontend/: nuxt.config.ts  package-lock.json  package.json  tsconfig.json
frontend/components/: client.vue  detectionTest.vue
frontend/layouts/: default.vue
frontend/pages/: index.vue
frontend/types/: ClientOut.ts  detection.ts  detectionMessage.ts  device.ts
mc_code/bewegungsmleder/: bewegungsmleder.ino
mc_code/detector_simple/: detector_simple.ino
mc_code/test_variable_safe/: test_variable_safe.ino
mc_schematics/: detector.fzz
migrations/: 0001_init_client_table.sql
