[package]
name = "rust_websocket"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tungstenite = "0.21.0"
env_logger = "0.11.3"
futures-channel = "0.3.30"
tokio-tungstenite = "0.21.0"

futures-util = { version = "0.3.28", default-features = false, features = ["sink", "std"] }
tokio = { version = "1.0.0", default-features = false, features = ["full"] }

serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
chrono = { version = "0.4.35", features = [ "serde" ] }
sqlx = { version = "0.7.4", features = [ "runtime-tokio-rustls", "postgres", "chrono" ] }
