[package]
name = "alert_net_server_simple"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.30"
futures-channel = "0.3.30"
futures-util = { version = "0.3.28", default-features = false, features = ["sink"] }

tungstenite = "0.21.0"
tokio = { version = "1.37.0", default-features = false, features = ["full"] }
tokio-tungstenite = "0.21.0"
axum = "0.7.5"


dotenv = "0.15.0"
env_logger = "0.11.3"
chrono = { version = "0.4.37" }
